@@ -1,1 +1,1 @@
-__version__ = '0.8.dev2'
+__version__ = '0.8.dev3'
